--- a/server/Gemfile
+++ b/server/Gemfile
@@ -27,6 +27,7 @@ gem 'net-smtp', require: false
 # gem 'image_processing', '~> 1.2'
 gem 'dotenv-rails'
 gem 'jwt'
+gem 'active_model_serializers', '~> 0.10.13'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
