rswag gem added, and documentation for sesisons done

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -28,6 +28,8 @@ gem 'net-smtp', require: false
 gem 'active_model_serializers', '~> 0.10.13'
 gem 'dotenv-rails'
 gem 'jwt'
+
+gem 'rswag'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
