--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "formik": "^2.2.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^6.3.0",
+    "react-trello": "^2.2.11",
     "yup": "^0.32.11"
   },
   "devDependencies": {
