--- a/server/Gemfile
+++ b/server/Gemfile
@@ -36,6 +36,10 @@ gem 'bootsnap', '>= 1.4.4', require: false
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
+group :production, :development, :test do
+  gem 'rspec-rails', '~> 5.0.0'
+end
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
@@ -43,7 +47,6 @@ group :development, :test do
   gem 'factory_bot_rails', '~> 5.0', '>= 5.0.2'
   gem 'faker', '~> 2.20'
   gem 'rails-controller-testing'
-  gem 'rspec-rails', '~> 5.0.0'
   gem 'rubocop-rails', '~> 2.14', '>= 2.14.2'
   gem 'shoulda-matchers', '~> 5.0'
   gem 'simplecov', '~> 0.21.2'
