--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-trello": "^2.2.11",
     "yup": "^0.32.11"
