name to tittle into tasks serializer, refactoring to test

--- a/server/.rubocop.yml
+++ b/server/.rubocop.yml
@@ -38,8 +38,8 @@ Layout/TrailingWhitespace:
 Layout/FirstHashElementLineBreak:
   Enabled: true
 
-Layout/LineLength:
-  Max: 90
+# Layout/LineLength:
+#   Max: 90
 
 Layout/MultilineHashBraceLayout:
   EnforcedStyle: new_line
